--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  </head>
  <body>
    <h1>welcome to fidgetboyrolly's minecraft mods and addons</h1>
-   <p>sorry but it semes like there are no mods or addons yet</p>
+   <img href="nuclear.jpg"></img>
+  <a href="nuclear.html">how a nuclear power pland works but in minecraft</a>
  </body>
 </html>
